--- a/index.html
+++ b/index.html
@@ -289,6 +289,6 @@
     actualizarRelojYFecha();
   </script>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
